@@ -93,8 +93,48 @@ import Triangle.AbstractSyntaxTrees.Visitor;
 import Triangle.AbstractSyntaxTrees.Vname;
 import Triangle.AbstractSyntaxTrees.VnameExpression;
 import Triangle.AbstractSyntaxTrees.WhileCommand;
+import Triangle.AbstractSyntaxTrees.ImportDeclaration;
+
+
+
 
 public final class Encoder implements Visitor {
+    
+    //para linker// Encoder.java (campos)
+private String currentPackageName = null; // ahora sí se usa
+private java.util.Set<Declaration> exportedDecls = new java.util.HashSet<>();
+private java.util.List<String> exportLines = new java.util.ArrayList<>(); // "export <qname> <addr>"
+private java.util.List<String> importLines = new java.util.ArrayList<>(); // "import <qname>"
+private java.util.Map<Declaration,String> importedNames = new java.util.HashMap<>();
+private java.util.Map<String,String> importedByName = new java.util.HashMap<>();
+private java.util.List<String> relocLines = new java.util.ArrayList<>();
+private boolean isCompilingProgram() { return currentPackageName == null; }
+
+
+@Override
+public Object visitImportDeclaration(ImportDeclaration ast, Object o) {
+  if (ast.names != null && ast.packageId != null) {
+    for (Identifier id : ast.names) {
+      String qname = ast.packageId.spelling + "." + id.spelling;
+      importLines.add("import " + qname);
+
+      // Mapa por Declaration (ya estaba)
+      if (id.decl instanceof Declaration) {
+        importedNames.put((Declaration) id.decl, qname);
+      }
+
+      // [PKG-LINK FIX] NUEVO: también guardar por nombre simple
+      importedByName.put(id.spelling, qname);
+    }
+  }
+  return Integer.valueOf(0);
+}
+
+
+
+
+
+
 
 
   // Commands
@@ -162,10 +202,44 @@ public final class Encoder implements Visitor {
     return null;
   }
   
-  public Object visitPackageCommand(PackageCommand ast, Object o) {
-      // se debe de implementar algo?
-      return null;
+@Override
+public Object visitPackageCommand(PackageCommand ast, Object o) {
+  this.currentPackageName = ast.I.spelling;
+
+  // Genera el código de todas las D (funcs, procs, exports, etc.)
+  Object res = ast.D.visit(this, o);
+
+  // Al final, ya todas las entidades tienen dirección.
+  exportLines.clear();
+  for (Declaration d : exportedDecls) {
+    String name = null;
+    ObjectAddress addr = null;
+
+    if (d instanceof FuncDeclaration) {
+      FuncDeclaration fd = (FuncDeclaration) d;
+      name = fd.I.spelling;
+      if (fd.entity instanceof KnownRoutine) {
+        addr = ((KnownRoutine) fd.entity).address;
+      }
+    } else if (d instanceof ProcDeclaration) {
+      ProcDeclaration pd = (ProcDeclaration) d;
+      name = pd.I.spelling;
+      if (pd.entity instanceof KnownRoutine) {
+        addr = ((KnownRoutine) pd.entity).address;
+      }
+    }
+
+    if (name != null && addr != null) {
+      String qname = currentPackageName + "." + name;
+      exportLines.add("export " + qname + " " + addr.displacement);
+    }
   }
+
+  // (No escribas aquí el archivo; ya lo haces en encodeRun si exportLines no está vacío)
+  return res;
+}
+
+
   
   // Expressions
   public Object visitArrayExpression(ArrayExpression ast, Object o) {
@@ -296,6 +370,16 @@ public final class Encoder implements Visitor {
     emit(Machine.JUMPop, 0, Machine.CBr, 0);
     ast.entity = new KnownRoutine(Machine.closureSize, frame.level, nextInstrAddr);
     writeTableDetails(ast);
+    
+    if (exportedDecls.contains(ast)) {
+  if (ast.entity instanceof KnownRoutine) {
+    ObjectAddress addr = ((KnownRoutine) ast.entity).address;
+    String qname = (currentPackageName != null ? currentPackageName + "." + ast.I.spelling
+                                               : ast.I.spelling);
+    exportLines.add("export " + qname + " " + addr.displacement);
+  }
+}
+    
     if (frame.level == Machine.maxRoutineLevel)
       reporter.reportRestriction("can't nest routines more than 7 deep");
     else {
@@ -318,6 +402,16 @@ public final class Encoder implements Visitor {
     ast.entity = new KnownRoutine (Machine.closureSize, frame.level,
                                 nextInstrAddr);
     writeTableDetails(ast);
+    
+    if (exportedDecls.contains(ast)) {
+  if (ast.entity instanceof KnownRoutine) {
+    ObjectAddress addr = ((KnownRoutine) ast.entity).address;
+    String qname = (currentPackageName != null ? currentPackageName + "." + ast.I.spelling
+                                               : ast.I.spelling);
+    exportLines.add("export " + qname + " " + addr.displacement);
+  }
+}
+    
     if (frame.level == Machine.maxRoutineLevel)
       reporter.reportRestriction("can't nest routines so deeply");
     else {
@@ -363,10 +457,14 @@ public final class Encoder implements Visitor {
     return new Integer(extraSize);
   }
   
-  public Object visitExportDeclaration(ExportDeclaration ast, Object o) {
-      // es posible que se necesite agregar mas logica
-    return new Integer(0);
+@Override
+public Object visitExportDeclaration(ExportDeclaration ast, Object o) {
+  if (ast.I.decl instanceof Declaration) {
+    exportedDecls.add((Declaration) ast.I.decl);
+  }
+  return Integer.valueOf(0);
 }
+
 
 
   // Array Aggregates
@@ -628,28 +726,62 @@ public final class Encoder implements Visitor {
     return null;
   }
 
-  public Object visitIdentifier(Identifier ast, Object o) {
-    Frame frame = (Frame) o;
-    if (ast.decl.entity instanceof KnownRoutine) {
-      ObjectAddress address = ((KnownRoutine) ast.decl.entity).address;
-      emit(Machine.CALLop, displayRegister(frame.level, address.level),
-       Machine.CBr, address.displacement);
-    } else if (ast.decl.entity instanceof UnknownRoutine) {
-      ObjectAddress address = ((UnknownRoutine) ast.decl.entity).address;
-      emit(Machine.LOADop, Machine.closureSize, displayRegister(frame.level,
-           address.level), address.displacement);
-      emit(Machine.CALLIop, 0, 0, 0);
-    } else if (ast.decl.entity instanceof PrimitiveRoutine) {
-      int displacement = ((PrimitiveRoutine) ast.decl.entity).displacement;
-      if (displacement != Machine.idDisplacement)
-        emit(Machine.CALLop, Machine.SBr, Machine.PBr, displacement);
-    } else if (ast.decl.entity instanceof EqualityRoutine) { // "=" or "\="
-      int displacement = ((EqualityRoutine) ast.decl.entity).displacement;
-      emit(Machine.LOADLop, 0, 0, frame.size / 2);
-      emit(Machine.CALLop, Machine.SBr, Machine.PBr, displacement);
-    }
+@Override
+public Object visitIdentifier(Identifier ast, Object o) {
+  Frame frame = (Frame) o;
+
+  // [PKG-LINK FIX] 1) Caso importado por instancia de Declaration
+  if (isCompilingProgram()
+      && ast.decl instanceof Declaration
+      && importedNames.containsKey((Declaration) ast.decl)) {
+
+    String qname = importedNames.get((Declaration) ast.decl);
+    int callInstrIndex = nextInstrAddr;
+
+    // Llamada a rutina top-level (nivel destino 0)
+    emit(Machine.CALLop, displayRegister(frame.level, 0), Machine.CBr, 0);
+
+    relocLines.add("reloc " + qname + " " + callInstrIndex);
+    // System.out.println("[reloc decl] " + qname + " @ " + callInstrIndex);
     return null;
   }
+
+  // [PKG-LINK FIX] 2) Fallback: caso importado por NOMBRE simple (cuando no coincide Declaration)
+  if (isCompilingProgram()) {
+    String qnameByName = importedByName.get(ast.spelling);
+    if (qnameByName != null) {
+      int callInstrIndex = nextInstrAddr;
+
+      emit(Machine.CALLop, displayRegister(frame.level, 0), Machine.CBr, 0);
+
+      relocLines.add("reloc " + qnameByName + " " + callInstrIndex);
+      // System.out.println("[reloc name] " + qnameByName + " @ " + callInstrIndex);
+      return null;
+    }
+  }
+
+  // --- comportamiento original para no-importados ---
+  if (ast.decl.entity instanceof KnownRoutine) {
+    ObjectAddress address = ((KnownRoutine) ast.decl.entity).address;
+    emit(Machine.CALLop, displayRegister(frame.level, address.level),
+         Machine.CBr, address.displacement);
+  } else if (ast.decl.entity instanceof UnknownRoutine) {
+    ObjectAddress address = ((UnknownRoutine) ast.decl.entity).address;
+    emit(Machine.LOADop, Machine.closureSize, displayRegister(frame.level,
+         address.level), address.displacement);
+    emit(Machine.CALLIop, 0, 0, 0);
+  } else if (ast.decl.entity instanceof PrimitiveRoutine) {
+    int displacement = ((PrimitiveRoutine) ast.decl.entity).displacement;
+    if (displacement != Machine.idDisplacement)
+      emit(Machine.CALLop, Machine.SBr, Machine.PBr, displacement);
+  } else if (ast.decl.entity instanceof EqualityRoutine) {
+    int displacement = ((EqualityRoutine) ast.decl.entity).displacement;
+    emit(Machine.LOADLop, 0, 0, frame.size / 2);
+    emit(Machine.CALLop, Machine.SBr, Machine.PBr, displacement);
+  }
+  return null;
+}
+
 
   public Object visitIntegerLiteral(IntegerLiteral ast, Object o) {
     return null;
@@ -742,12 +874,46 @@ public final class Encoder implements Visitor {
   // Generates code to run a program.
   // showingTable is true iff entity description details
   // are to be displayed.
-  public final void encodeRun (Program theAST, boolean showingTable) {
-    tableDetailsReqd = showingTable;
-    //startCodeGeneration();
-    theAST.visit(this, new Frame (0, 0));
-    emit(Machine.HALTop, 0, 0, 0);
+  
+  private void writeLinesToFile(String path, java.util.List<String> lines) {
+  try (java.io.PrintWriter pw = new java.io.PrintWriter(new java.io.FileOutputStream(path))) {
+    for (String s : lines) pw.println(s);
+  } catch (IOException ex) {
+    // si quieres: System.err.println("No se pudo escribir " + path + ": " + ex.getMessage());
   }
+}
+  
+public final void encodeRun(Program theAST, boolean showingTable) {
+  tableDetailsReqd = showingTable;
+
+  currentPackageName = null;
+  exportedDecls.clear();
+  exportLines.clear();
+  importLines.clear();
+  relocLines.clear();
+  importedNames.clear();
+  importedByName.clear(); // [PKG-LINK FIX] NUEVO
+
+  theAST.visit(this, new Frame(0, 0));
+  emit(Machine.HALTop, 0, 0, 0);
+
+  System.out.println("[Encoder] relocLines size = " + relocLines.size()
+                     + " | imports=" + importLines.size()
+                     + " | currentPackageName=" + currentPackageName);
+
+  if (currentPackageName != null) {
+    if (!exportLines.isEmpty()) writeLinesToFile(currentPackageName + ".map", exportLines);
+  } else {
+    if (!importLines.isEmpty()) writeLinesToFile("program.imp", importLines);
+    if (!relocLines.isEmpty())  writeLinesToFile("program.reloc", relocLines);
+  }
+}
+
+
+
+
+  
+  
 
   // Decides run-time representation of a standard constant.
   private final void elaborateStdConst (Declaration constDeclaration,
